# ApiQlient

./: README.md  example.py  pyproject.toml  requirements.txt  requirements_all.txt
apiqlient/: __init__.py  application.py  router.py
fastclient/: __init__.py  application.py  router.py
tests/: test_unit.py
